--- a/YeelightBLECtl/Base.lproj/Main.storyboard
+++ b/YeelightBLECtl/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PpZ-M1-7jk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PpZ-M1-7jk">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -60,12 +60,12 @@
                     <navigationItem key="navigationItem" title="Yeelight Bedside" id="lsN-T5-ukA">
                         <barButtonItem key="leftBarButtonItem" style="done" systemItem="cancel" id="xD4-nZ-kbz">
                             <connections>
-                                <action selector="disconnect:" destination="8FZ-d2-GoO" id="tk9-y3-gyI"/>
+                                <action selector="disconnect:" destination="8FZ-d2-GoO" id="d9W-Rg-Dsj"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="refresh" id="KLU-ae-Cj9">
                             <connections>
-                                <action selector="scanPeripheral" destination="8FZ-d2-GoO" id="GdR-yd-KcZ"/>
+                                <action selector="reconnect:" destination="8FZ-d2-GoO" id="D51-DP-Dlt"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
